# axum-todo

./: Cargo.toml
migrations/: 20250304232816_create_todos.down.sql
src/: main.rs
src/domain/models/: mod.rs  todo.rs
src/domain/models/tests/: mod.rs  todo_tests.rs
src/domain/repositories/: mod.rs  todo_repositories.rs  todo_repository.rs
src/domain/repositories/tests/: todo_repository_tests.rs
src/infrastructure/: db.rs  mod.rs  todo_repository.rs  todo_respositories.rs
src/infrastructure/tests/: mod.rs  todo_repository_tests.rs
src/presentation/handlers/: todo_handler.rs
src/usecase/: mod.rs  todo_usecase.rs
src/usecase/tests/: mod.rs  todo_usecase_tests.rs
