[package]
name = "axum-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde = {version="1.0", features = ["derive"]}
tokio = {version="1.0", features = ["full"]}
tower = {version="0.5", features = ["util", "timeout"]}
tower-http = {version="0.6", features = ["add-extension", "trace"]}
# イベントやスパンを生成(ログ生成)
tracing = "0.1"
# フィルタリングやフォーマットを行うためのサブスクライバを提供(tracingのログを処理)
tracing-subscriber = {version="0.3", features = ["env-filter"]}
uuid = {version="1.15", features = ["serde", "v4"]}
dotenvy = "0.15"