[package]
name = "axum-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde = {version="1.0", features = ["derive"]}
serde_json = "1"
tokio = {version="1.0", features = ["full"]}
tower = {version="0.5", features = ["util", "timeout"]}
tower-http = {version="0.6", features = ["add-extension", "trace"]}
# イベントやスパンを生成(ログ生成)
tracing = "0.1"
# フィルタリングやフォーマットを行うためのサブスクライバを提供(tracingのログを処理)
tracing-subscriber = {version="0.3", features = ["env-filter"]}
uuid = {version="1.15", features = ["serde", "v4"]}
sqlx = {version="0.8.3", features=["postgres", "runtime-tokio-rustls", "uuid", "chrono"]}
chrono = {version = "0.4", features = ["serde"]}
dotenvy = "0.15"
async-trait = "0.1"
http="1.2"